Fix content overflow on header

--- a/style/style-main.css
+++ b/style/style-main.css
@@ -84,7 +84,7 @@ h1.header-title {
 
 .header-content {
     margin: 0 auto;
-    width: fit-content !important;
+    display: inline-block;
     text-align: center;
     text-shadow: 0px 0px;
     background-color: rgba(246,255,255,.9);
